--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     deploy:
         runs-on: ubuntu-latest
         if: |
-            !contains(github.event.head_commit.message, '[skip ci]')
+            !contains(github.event.head_commit.message, '[skip deploy]')
 
         environment: ${{ github.ref == 'refs/heads/main' && 'prod' || 'test' }}
 
