Updated forgot password

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,11 @@ MICROSOFT_REDIRECT_URI=https://api.local/auth/callback.php
 # Admin Portal URL
 ADMIN_PORTAL_URL=http://localhost:3000/
 
+# VMS Portal URL
 VMS_PORTAL_URL=http://localhost:3000/
+
+# AMS Portal URL
+AMS_PORTAL_URL=http://localhost:3000/
 
 # Vendor Login URL
 VENDOR_LOGIN_URL=http://localhost:3000/login
