--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,6 +64,17 @@ jobs:
                             echo "Composer installation failed."
                             exit 1
                         fi
+            - name: Set Permissions 755 for all directories and files
+              uses: appleboy/ssh-action@v0.1.7
+              with:
+                  host: ${{ secrets.CPANEL_HOST }}
+                  username: ${{ secrets.CPANEL_USER }}
+                  key: ${{ secrets.CPANEL_SSH_KEY }}
+                  script: |
+                        DEPLOY_PATH="/home/${{ secrets.CPANEL_USER }}/${{ secrets.DEPLOY_DIR }}"
+                        chmod -R 755 "$DEPLOY_PATH"
+                        echo "Permissions set to 755 for all directories and files."
+
 
             - name: Check Deployment
               uses: appleboy/ssh-action@v0.1.7
