--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "adnanhussainturki/microsoft-api-php": "^0.04.0",
     "league/oauth2-client": "^2.8",
     "ralouphie/getallheaders": "^3.0",
-    "vlucas/phpdotenv": "^5.6"
+    "vlucas/phpdotenv": "^5.6",
+    "phpoffice/phpspreadsheet": "^1.29"
   },
   "autoload": {
     "psr-4": {
