Feat: SSO for related applications

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,10 @@ VMS_PORTAL_URL=http://localhost:3000/
 # AMS Portal URL
 AMS_PORTAL_URL=http://localhost:3000/
 
+# INTERNAL PORTAL URL
+INTERNAL_PORTAL_URL=http://localhost:3000/
+
+
 # Vendor Login URL
 VENDOR_LOGIN_URL=http://localhost:3000/login
 
